--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HeartSheep</title>
     <style>
+/* 使用两个长方形交错，然后旋转45度，将一边变圆得到心型图案。        */
       .heart {
         position: absolute;
         margin: auto;
