--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           height: 100vh;
         }
 
+/* 纯css画心形，仅使用一个div  */
         .heart{
           /* border:1px solid red; */
           height: 50px;
