--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           height: 100vh;
         }
 
-/* 纯css画心形，仅使用一个div  */
+/* 纯css画心形，使用伪元素可以仅用一个div  */
         .heart{
           /* border:1px solid red; */
           height: 50px;
